# autokamak

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
agent/prompts/: example1.yaml  oft_example_configurable.yaml  oft_example_generation.yaml
agent/runners/: config.py  plan_execute.py  plan_execute_feedback.py
docs/: agent-workflows.md  architecture.md  configs.md  development-notes.md  dspy_integration_plan.md  examples.md  glossary.md  project_agenda.md  search_space.md  surrogate_model_candidates.md
examples/config_driven_equilibrium/: README_INVERT_PSI.md  discretization_config.yaml  forward_plot_psi.py  run_discretization_sweep.py  run_equilibrium_from_config.py  run_invert_psi.py  run_new_discretizations.yaml
oft_configurable_example_2/: README.md  discretization_config.yaml  discretization_sweep.yaml  graph_store.sqlite  run_equilibrium.py  run_new_discretizations.yaml  run_sweep.py
oft_discretization_example/: README.md  README_INVERT_PSI.md  acceptance_check.py  forward_once.py  invert_psi_example.yaml  sweep_discretizations.yaml
prompts/: oft_discretization_example.yaml  oft_example_configurable_2.yaml
tests/: conftest.py  test_automl_loop_e2e_mock.py  test_data_sweep_smoke.py  test_diagnostics_smoke.py  test_dspy_module_smoke.py  test_dspy_trace_loader.py  test_geometry.py  test_h5io.py  test_imports.py  test_meta_loop_e2e_mock.py  test_metric_meta_terms.py  test_pipelines_cli.py  test_schema.py  test_solver_smoke.py  test_surrogate_e2e_mock.py  test_surrogate_smoke.py
tools/: collect_traces.sh  eval_surrogate.py  probe_feasible_box.py  render_physics.py  run_full_pipeline.py  trace_to_html.py
(+160 files in other folders)
